--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: minimal
 dist: bionic
 install:
   - sudo apt-get install linux-headers-$(uname -r)
+  - sudo apt-get install virtualbox
 script: true
