--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: minimal
 dist: bionic
 install:
+  - sudo apt-get install linux-headers-$(uname -r)
   - sudo apt-get install virtualbox
 script: true
