--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ dist: bionic
 install:
   - sudo apt-get install linux-headers-$(uname -r)
   - sudo apt-get install virtualbox
-script: true
+script: systemctl status virtualbox
