--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ dist: bionic
 install:
   - sudo apt-get install linux-headers-$(uname -r)
   - sudo apt-get install virtualbox
+  - wget --no-verbose https://releases.hashicorp.com/vagrant/2.2.7/vagrant_2.2.7_x86_64.deb
+  - sudo dpkg --install vagrant_2.2.7_x86_64.deb
 script: systemctl status virtualbox
